# backend/api/play_to_win_api.go
@@ -291,6 +291,22 @@ func (s Server) AddPlayToWinSession(c *gin.Context) {
 	c.JSON(http.StatusCreated, ptwSession)
 }
 
+func (s Server) GetPlayToWinGame(c *gin.Context, ptwId types.UUID) {
+	dbPtwGame, err := s.queries.GetPlayToWinGame(c.Request.Context(), uuidToPgTypeUUID(ptwId))
+	if err != nil {
+		if isNotFound(err) {
+			notFound(c)
+			return
+		}
+		log.Printf("Error getting play to win game: %v", err)
+		internalError(c, err)
+		return
+	}
+
+	ptwGame := FromPlayToWinGameOverview(dbPtwGame)
+	c.JSON(http.StatusOK, ptwGame)
+}
+
 func (s Server) ListPlayToWinGames(c *gin.Context, params ListPlayToWinGamesParams) {
 	var (
 		sanitizedTitle string
@@ -330,16 +346,7 @@ func (s Server) ListPlayToWinGames(c *gin.Context, params ListPlayToWinGamesPara
 		return
 	}
 
-	ptwGameList := PlayToWinGameList{
-		Games: make([]PlayToWinGame, len(dbPTWGames)),
-	}
-	for i, dbPTWGame := range dbPTWGames {
-		ptwGameList.Games[i] = PlayToWinGame{
-			GameId:      pgUUIDToUUID(dbPTWGame.GameID),
-			PlayToWinId: pgUUIDToUUID(dbPTWGame.PlayToWinID),
-			Title:       dbPTWGame.GameTitle,
-		}
-	}
+	ptwGameList := FromPlayToWinGameList(dbPTWGames)
 
 	c.JSON(http.StatusOK, ptwGameList)
 }
