# swagger/api.yaml
@@ -675,6 +675,34 @@ paths:
               schema:
                 $ref: '#/components/schemas/PlayToWinGameList'
 
+  /api/v1/ptw/game/ptwId/{ptwId}:
+    get:
+      tags:
+        - ptw
+      operationId: getPlayToWinGame
+      parameters:
+        - in: path
+          name: ptwId
+          required: true
+          schema:
+            type: string
+            format: uuid
+          description: Play to win game ID
+      responses:
+        '200':
+          description: Play to win game retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlayToWinGame'
+        '404':
+          description: Play to win game not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      description: Get a play to win game by ID
+
 components:
   schemas:
     GameStatus:
@@ -1131,6 +1159,10 @@ components:
           type: string
           description: The title of the game
           example: "Azul"
+        winner:
+          type: object
+          $ref: '#/components/schemas/PlayToWinEntry'
+          description: The winner of the play to win game, not set if raffle has not happened
 
     PlayToWinGameList:
       type: object
